--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -33,20 +33,59 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .tasks-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 100%;
   width: 100%;
-  .hide-disable {
-    display: none;
-  }
 }
+
+/* Add button overlay */
+.overlay-add-task-container {
+  position: fixed;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  width: 100%;
+  height: 200px;
+  bottom: 0;
+}
+
+.add-task-button-container {
+
+}
+
+.btn-add-task {
+  background: none;
+  border: none;
+  outline: none;
+}
+
+.img-add-task {
+  height: 50px;
+  width: 50px;
+  margin: 10px;
+}
+
+/* Main window overlay */
+/* NOT CURRENTLY IN USE! */
+.window-overlay-container {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: black;
+}
+/* END - Main window overlay */
 
 /* Task items as a list */
 .task-container {
   display: flex;
   flex-direction: row;
+  position: relative;
   height: 3em;
   width: 90%;
   margin: 10px;
@@ -80,6 +119,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .task-item-task-details-desc {
   font-size: .7em;
+  padding-left: 1px;
 }
 
 .task-item-task-priority {
@@ -114,6 +154,68 @@ h1, h2, h3, h4, h5, h6 {
 }
 /* END - Task items as a list */
 
+/* Task item OVERLAY as an individual */
+.task-item-options-overlay-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+.task-item-options-overlay {
+  height: 100%;
+  width: 100%;
+  background: rgb(160, 160, 160);
+  transform: translateX(-100%);
+  transition: transform 800ms ease-in-out;
+  transform-origin: left;
+}
+
+.animate-task-item-options-overlay {
+  transform: translateX(0);
+  
+}
+
+.task-item-options-delete-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: green;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.task-item-options-confirm-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  background: red;
+  width: 100%;
+  height: 100%;
+  /* display: none; */
+}
+
+.img-confirm-delete {
+  height: 35px;
+  width: auto;
+  margin: 0 10px;
+}
+
+.task-item-options-delete-icon {
+
+}
+
+.img-delete-task {
+  height: 35px;
+  width: auto;
+}
+/* END - Task item OVERLAY as an individual */
+
 /* Task item as an individual */
 .task-settings-main-container {
   display: flex;
@@ -137,7 +239,6 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 0.8em;
 }
 
-
 input, select, textarea {
   height: var(--task-settings-input-height);
   width: calc(100% - 10px);
@@ -155,6 +256,8 @@ input, select, textarea {
   width: 50%;
 }
 /* END - Task item as an individual */
+
+
 
 /* Backgrounds */
 .bg1 {
@@ -180,8 +283,27 @@ input, select, textarea {
   background: linear-gradient(to bottom right, rgba(84, 190, 249, 1.0), rgba(181, 118, 229, 1.0));
 }
 
+.bg4 {
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 80 80'%3E%3Cg fill='%23000000' fill-opacity='0.04'%3E%3Cpath fill-rule='evenodd' d='M11 0l5 20H6l5-20zm42 31a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM0 72h40v4H0v-4zm0-8h31v4H0v-4zm20-16h20v4H20v-4zM0 56h40v4H0v-4zm63-25a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM53 41a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-30 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-28-8a5 5 0 0 0-10 0h10zm10 0a5 5 0 0 1-10 0h10zM56 5a5 5 0 0 0-10 0h10zm10 0a5 5 0 0 1-10 0h10zm-3 46a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM21 0l5 20H16l5-20zm43 64v-4h-4v4h-4v4h4v4h4v-4h4v-4h-4zM36 13h4v4h-4v-4zm4 4h4v4h-4v-4zm-4 4h4v4h-4v-4zm8-8h4v4h-4v-4z'/%3E%3C/g%3E%3C/svg%3E");}
+
+/* Shadow effects */
+.box-shadow-1 {
+  -webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.3);
+  box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.3);
+}
+
 /* Utility */
 .hide-disable {
   display: none;
+  pointer-events: none;
 }
 
+.hide {
+  display: none;
+}
+
+.show {
+  display: flex;
+}
