--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -28,6 +28,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .window-wrapper {
+  position: relative;
   height: 100%;
   width: 100%;
 }
@@ -39,6 +40,9 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
   height: 100%;
   width: 100%;
+  padding-top: 10px;
+  background: rgba(248, 248, 248, 0.932);
+
 }
 
 /* Add button overlay */
@@ -50,6 +54,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 200px;
   bottom: 0;
+  opacity: 0;
 }
 
 .add-task-button-container {
@@ -90,7 +95,15 @@ h1, h2, h3, h4, h5, h6 {
   width: 90%;
   margin: 10px;
   background: white;
+  opacity: 0;
+  transition: all 600ms ease;
+  /* border: 1px solid rgba(61, 61, 61, 0.596); */
 }
+
+.animate-task-shrink {
+  transform: scaleY(0); 
+}
+
 
 .task-settings-main-heading {
   font-size: 1.2em;
@@ -100,14 +113,14 @@ h1, h2, h3, h4, h5, h6 {
 .task-item-project-color {
   background: red;
   height: 100%;
-  width: 8px;
+  width: 5px;
 }
 
 .task-item-project-color-overlay {
   background: rgb(0,0,0);
   background: linear-gradient(0deg, rgba(0,0,0,.20) 0%, rgba(0,0,0,0) 100%);
   height: 100%;
-  width: 8px;
+  width: 5px;
   pointer-events: none;
   outline: 1px solid rgba(0,0,0,.2);
 }
@@ -235,7 +248,8 @@ h1, h2, h3, h4, h5, h6 {
   height: 100%;
   width: calc(100% - 30px);
   padding: 15px;
-  opacity: 1;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .task-settings {
@@ -268,26 +282,150 @@ input, select, textarea {
 
 /* Task Top Bar */
 .task-topbar-container {
-  background: white;
   height: 80px;
   width: 100%;
 }
 
+.task-topbar-cog-container {
+  height: auto;
+  width: 100%;
+}
+
+.img-cog {
+  height: 30px;
+  width: auto;
+  padding: 5px;
+}
+.img-cog-s {
+  height: 20px;
+  width: auto;
+  padding: 5px;
+}
+
 /* Mobile menu */
 .mobile-menu-container {
-  z-index: 9999;
-  background: black;
+  z-index: 999;
+  background: rgb(248, 248, 248);
   position: absolute;
   width: 60%;
   height: 100%;
   top: 0;
-  left: -60%;
-  transition: translate 2000ms ease-in-out;
+  box-shadow: 10px 0 5px -2px rgba(0, 0, 0, 0.233);
+  transform: translateX(calc(-100% - 10px));
+  transition: transform 800ms ease-in-out;
 }
 
 .mobile-menu-show {
-  left: 0;
+  transform: translateX(0);
 }
+
+.mobile-projects-display-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+/* Mobile menu projects list */
+.mobile-menu-project-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 10px 0;
+}
+
+.mobile-menu-project-color-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 35px;
+  padding-left: 5px;
+}
+
+.mobile-menu-project-color {
+  width: 15px;
+  height: 15px;
+  border: 1px solid rgba(0, 0, 0, 0.562);
+  border-radius: 50%;
+}
+
+.mobile-menu-project-color-overlay {
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  background: rgb(0,0,0);
+  background: -moz-linear-gradient(0deg, rgba(0,0,0,0.5830707282913166) 0%, rgba(0,0,0,0) 100%);
+  background: -webkit-linear-gradient(0deg, rgba(0,0,0,0.5830707282913166) 0%, rgba(0,0,0,0) 100%);
+  background: linear-gradient(0deg, rgba(0,0,0,0.5830707282913166) 0%, rgba(0,0,0,0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#000000",GradientType=1);
+  border-radius: 50%;
+}
+
+.mobile-menu-project-text-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.mobile-menu-project-title-container {
+  width: 100%;
+}
+
+.mobile-menu-project-title {
+  padding-left: 5px;
+}
+
+.mobile-menu-project-desc-container {
+  width: 100%;
+  font-size: 0.8em;
+}
+
+.mobile-menu-project-desc {
+  padding-left: 5px;
+}
+
+.mobile-menu-project-controls-container {
+  display: flex;
+  height: 100%;
+  width: 40px;
+}
+
+.mobile-menu-project-controls {
+  width: 30px;
+}
+
+.btn-mobile-menu-project-edit {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 30px;
+  padding: 0;
+  margin: 0;
+  border: none;
+  outline: none;
+  background: none;
+}
+
+.img-mobile-menu-project-edit {
+  width: 20px;
+  height: 20px;
+}
+
+/* Task Mobile Overlay */
+.task-mobile-overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.623);
+  z-index: 998;
+  pointer-events: none;
+  transition: opacity 800ms ease-in-out;
+  opacity: 0;
+}
+
+
 
 /* Backgrounds */
 .bg1 {
@@ -336,4 +474,21 @@ input, select, textarea {
 
 .show {
   display: flex;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.show-opacity {
+  opacity: 1;
+}
+
+.hide-opacity {
+  opacity: 0;
+}
+
+.btn-clear {
+  background: none;
+  border: none;
+  outline: none;
+
 }
